# cv

./: Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package.json  tailwind.config.js
.github/workflows/: build-chrome-capture.yml  build-stripper.yml  deploy.yml  test.yml
assets/: script.js  tailwind.css
public/fav/: site.webmanifest
scripts/: chrome.rs  chrome_capture.rs  stripper.legacy  stripper.rs
src/: main.rs  metadata.rs  router.rs
src/components/: download.rs  experience.rs  footer.rs  header.rs  mod.rs  project.rs  skills.rs  spacer.rs  star-field.legacy2
src/data/: projects.ts
src/screens/: home.rs
