[package]
name = "cv"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.40"
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
