[package]
name = "cv"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.40"
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
hmziq-dioxus-free-icons = { version = "0.9.2", features = [
    "simple-icons",
    "lucide",
] }
serde_json = "1.0.140"

[dev-dependencies]
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[[bin]]
name = "chrome"
path = "scripts/chrome.rs"

[[bin]]
name = "chrome_capture"
path = "scripts/chrome_capture.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
